prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/base_x_pp.diag.txt
ERROR: argument of inc/dec operation is not assignable
testData/diagnostics/base_x_pp.nut:1:0

base.x++
^-----


